# wedgebox-hpc

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  wedgebox-hpc
docs/: installation.md  usage.md
examples/: sample-output.json
wedgebox_hpc/: __init__.py  cli.py
