[metadata]
name = wedgebox-hpc
version = 1.0.0
author = WedgeBox Team
author_email = wedgebox.team@gmail.com
description = GPU Performance Monitor for HPC Clusters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wedgebox/wedgebox-hpc
project_urls =
    Bug Tracker = https://github.com/wedgebox/wedgebox-hpc/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: System :: Monitoring
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8
install_requires =
    psutil>=5.8.0

[options.entry_points]
console_scripts =
    wedgebox-hpc = wedgebox_hpc.cli:main